--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -79,7 +79,7 @@
       font-size: 5rem;
       color: var(--korean-white);
       letter-spacing: -0.02em;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       text-align: left;
     }
 
@@ -126,8 +126,8 @@
       font-size: 4.2rem;
       color: var(--korean-black);
       border-bottom: 1px solid var(--korean-border);
-      padding-bottom: 1rem;
-      margin-bottom: 2rem;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
       font-weight: 700;
     }
 
@@ -151,7 +151,7 @@
       border-bottom: 3px solid var(--korean-black);
       padding-bottom: 0.75rem;
       margin-top: 0;
-      margin-bottom: 3rem;
+      margin-bottom: 1.5rem;
       position: relative;
       width: 100%;
     }
@@ -182,7 +182,7 @@
       border-bottom: 3px solid var(--korean-black);
       padding-bottom: 0.75rem;
       margin-top: 0;
-      margin-bottom: 3rem;
+      margin-bottom: 1.5rem;
       position: relative;
       width: 100%;
     }
@@ -208,15 +208,15 @@
 
     /* WebSlides-compatible consistent positioning */
     section .wrap {
-      padding: 0.5rem 1% !important;
-      max-width: 1400px;
-      margin: 0 auto;
-      width: 98%;
+      padding: 0.25rem 0.25% !important;
+      max-width: 100%;
+      margin: 0;
+      width: 99.5%;
     }
 
     /* Fixed header positioning using WebSlides structure */
     .korean-section-header {
-      margin-bottom: 3rem;
+      margin-bottom: 1.5rem;
       position: relative;
       top: 0;
     }
@@ -234,7 +234,7 @@
     /* Korean Metrics */
     .korean-metric, .mckinsey-metric {
       text-align: center;
-      padding: 0.75rem 1rem;
+      padding: 0.5rem 0.75rem;
       background: var(--korean-white);
       border: 1px solid var(--korean-border);
       border-radius: 4px;
@@ -289,8 +289,8 @@
     /* Korean Grid System */
     .korean-grid, .mckinsey-grid {
       display: grid;
-      gap: 1.5rem;
-      margin: 2rem 0;
+      gap: 0.75rem;
+      margin: 1rem 0;
     }
 
     .korean-grid.two-col, .mckinsey-grid.two-col {
@@ -310,8 +310,8 @@
       background: var(--korean-white);
       border: 1px solid var(--korean-border);
       border-radius: 4px;
-      padding: 0.75rem;
-      margin: 1rem 0;
+      padding: 0.5rem;
+      margin: 0.5rem 0;
       box-shadow: none;
       transition: all 0.2s ease;
       position: relative;
@@ -455,7 +455,7 @@
       color: var(--korean-black);
       padding: 0.75rem;
       border-radius: 2px;
-      margin: 2rem 0;
+      margin: 1rem 0;
       position: relative;
       border: 1px solid var(--korean-border);
     }
@@ -489,7 +489,7 @@
       border: 1px solid var(--korean-border);
       border-radius: 2px;
       padding: 0.75rem;
-      margin: 2rem 0;
+      margin: 1rem 0;
     }
 
     .cdp-guidance h3 {
@@ -576,7 +576,7 @@
       .korean-grid.three-col,
       .korean-grid.four-col {
         grid-template-columns: 1fr;
-        gap: 1rem;
+        gap: 0.5rem;
       }
 
       .korean-title, .mckinsey-title {
@@ -625,7 +625,7 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      margin: 2rem 0;
+      margin: 1rem 0;
       background: var(--korean-white);
       border: 1px solid var(--korean-border);
     }
@@ -641,7 +641,7 @@
     }
 
     table td {
-      padding: 0.75rem 1rem;
+      padding: 0.5rem 0.75rem;
       border-bottom: 1px solid var(--korean-border);
       color: var(--korean-black);
       font-size: 0.9rem;
@@ -701,7 +701,7 @@
     .standards-visualization {
       position: relative;
       height: 400px;
-      margin: 2rem 0;
+      margin: 1rem 0;
       background: var(--korean-white);
       border: 1px solid var(--korean-border);
       border-radius: 4px;
@@ -816,14 +816,14 @@
     .chart-container {
       position: relative;
       height: 300px;
-      margin: 2rem 0;
+      margin: 1rem 0;
     }
 
     .category-legend {
       display: flex;
       flex-wrap: wrap;
-      gap: 1rem;
-      margin: 2rem 0;
+      gap: 0.5rem;
+      margin: 1rem 0;
       justify-content: center;
     }
 
@@ -859,7 +859,7 @@
 
     .wrap {
       width: 100%;
-      padding: 0.5rem 1rem;
+      padding: 0.25rem 0.25rem;
       box-sizing: border-box;
       height: 100vh;
       display: flex;
@@ -871,12 +871,12 @@
 
     /* Optimize content spacing for 16:9 ratio */
     .korean-section-header {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       position: sticky;
       top: 0;
       background: white;
       z-index: 10;
-      padding: 1rem 0;
+      padding: 0.25rem 0;
       border-bottom: 2px solid var(--korean-navy);
     }
 
@@ -887,7 +887,7 @@
     }
 
     .korean-grid {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       flex-grow: 1;
       display: grid;
       align-content: start;
@@ -924,11 +924,11 @@
       }
 
       .wrap {
-        padding: 0.5rem 1.5rem;
+        padding: 0.25rem 0.5rem;
       }
 
       .korean-grid {
-        gap: 1.5rem;
+        gap: 0.75rem;
       }
     }
 
@@ -951,11 +951,11 @@
       }
 
       .wrap {
-        padding: 0.5rem 1rem;
+        padding: 0.25rem 0.25rem;
       }
 
       .korean-grid {
-        gap: 1rem;
+        gap: 0.5rem;
       }
     }
 
