Add Singapore MAS Transition Credits content to national baseline slide
- Added comprehensive Singapore MAS transition credits section
- Includes timeline (2023-2024), sectoral approach, international standards
- Features key insights on sectoral transition approach and financing
- Covers future outlook for global expansion to cement/steel sectors
- Properly formatted with Korean corporate styling

--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -1677,14 +1677,48 @@
               </div>
             </div>
 
-            <!-- Right Section: Empty space for new content -->
-            <div class="korean-card" style="padding: 1.5rem; background: var(--korean-light-gray); border: 2px dashed var(--korean-border);">
-              <h4 style="color: var(--korean-dark-gray); text-align: center; margin: 0; font-style: italic;">
-                새로운 콘텐츠 영역
-              </h4>
-              <p style="color: var(--korean-dark-gray); text-align: center; margin-top: 0.5rem; font-size: 0.9rem;">
-                오른쪽 섹션 추가 예정
-              </p>
+            <!-- Right Section: Singapore MAS Transition Credits -->
+            <div class="korean-card" style="padding: 1.5rem;">
+              <h4 style="font-size: 1.3rem; margin-bottom: 1rem; color: var(--korean-navy);">🇸🇬 싱가포르 MAS 트랜지션 크레딧(Transition Credits)</h4>
+              
+              <!-- Timeline -->
+              <div style="margin-bottom: 1.2rem;">
+                <p style="font-size: 1rem; margin-bottom: 0.5rem;"><strong>2023년 9월:</strong> MAS·맥킨지, 석탄화력 조기 폐쇄 위한 트랜지션 크레딧 개념 공식화</p>
+                <p style="font-size: 1rem; margin-bottom: 0.5rem;"><strong>TRACTION(Transition Credits Coalition):</strong> 2024년 중간보고서, 아시아 석탄발전 조기 퇴출 시범사업 진행</p>
+              </div>
+
+              <!-- Sectoral Approach -->
+              <div style="margin-bottom: 1.2rem;">
+                <p style="font-size: 1rem; margin-bottom: 0.5rem;"><strong>섹터별 접근:</strong> 발전(특히 석탄발전) 부문 전체를 대상으로 조기 폐쇄·감축 효과를 계량, 베이스라인 대비 감축분을 크레딧화</p>
+              </div>
+
+              <!-- International Standards -->
+              <div style="margin-bottom: 1.2rem;">
+                <p style="font-size: 1rem; margin-bottom: 0.5rem;"><strong>국제표준 도입 논의:</strong></p>
+                <ul style="font-size: 0.9rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
+                  <li>• VCMI(Voluntary Carbon Markets Integrity Initiative), ICVCM(Integrity Council for the Voluntary Carbon Market) 등에서 트랜지션 크레딧 표준화 논의</li>
+                  <li>• Article 6.4(파리협정) 하위 메커니즘에서 섹터별 트랜지션 크레딧 도입 검토</li>
+                </ul>
+              </div>
+
+              <!-- Key Insights -->
+              <div class="korean-card" style="padding: 1rem; margin-bottom: 1rem; background: var(--korean-success); color: white;">
+                <h5 style="margin-bottom: 0.5rem; color: white;">✅ 핵심 인사이트</h5>
+                <ul style="font-size: 0.9rem; line-height: 1.3; margin: 0; padding-left: 1rem;">
+                  <li>• 트랜지션 크레딧은 발전·에너지 등 고배출 섹터 전체의 구조적 감축을 촉진하는 '섹터별 접근'이 특징</li>
+                  <li>• 개별 프로젝트가 아닌, 국가·지역 단위 섹터 전체의 조기 감축분을 크레딧화 → 대규모 금융 동원 가능</li>
+                  <li>• MAS, TRACTION 등 아시아에서 실증사업 선도</li>
+                </ul>
+              </div>
+
+              <!-- Future Outlook -->
+              <div class="korean-card" style="padding: 1rem; background: var(--korean-warning); color: white;">
+                <h5 style="margin-bottom: 0.5rem; color: white;">⚠️ 향후 전망</h5>
+                <ul style="font-size: 0.9rem; line-height: 1.3; margin: 0; padding-left: 1rem;">
+                  <li>• 파리협정 Article 6.4 및 VCMI, ICVCM 등에서 공식 트랜지션 크레딧 표준 도입 시, 글로벌 확산 전망</li>
+                  <li>• 석탄발전 외 시멘트, 철강 등 고배출 섹터로 확대 가능성</li>
+                </ul>
+              </div>
             </div>
           </div>
 
