Constrain safeguard document image heights in risk diversification slide
- Added max-height constraints (300px containers, 280px images)
- Applied object-fit: contain to preserve aspect ratios
- Implemented flexbox centering for better alignment
- Affects safeguard1.jpg, safeguard2.jpg, and safeguard3.jpg
- Improves slide layout by preventing oversized image display

--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -1621,55 +1621,61 @@
             <div class="subtitle">REDD+, Transitional Credits 등 Baseline을 국가 단위로 설정해서 과다상계 방지목적의 크레딧 발행 중이며 기업 실 사용 사례도 등장</div>
           </div>
 
-          <!-- Two-column layout: content left, new section right -->
-          <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 2rem; margin-bottom: 2rem;">
-            <!-- Left Section: All existing content -->
+          <!-- Main Content Area with Consistent Styling -->
+          <div style="display: grid; grid-template-columns: 7fr 3fr; gap: 2rem; margin-bottom: 2rem;">
+            <!-- Left Section: Sectoral Credits Examples -->
             <div>
-              <h3 style="font-size: 1.8rem; margin-bottom: 1rem;">🌍 국가단위(Sectoral)의 Baseline 적용 탄소크레딧으로 발급 방법론 예시</h3>
+              <h3 style="font-size: 1.8rem; margin-bottom: 1.5rem; color: var(--korean-navy);">🌍 Sectoral(국가단위) Baseline 적용 탄소크레딧으로 발급 방법론 예시</h3>
               
-              <!-- Guyana Section -->
-              <div class="korean-card" style="padding: 1.2rem; margin-bottom: 1rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--korean-navy);">🇬🇾 가이아나 ART-TREES</h4>
-                <ul style="font-size: 1rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
-                  <li>• <strong>2022년 12월:</strong> 전 국토 대상 3,347만 TREES 크레딧 발급</li>
-                  <li>• <strong>Hess Corporation:</strong> 2030년까지 3,750만 크레딧 구매 (~7.5억 달러)</li>
-                  <li>• <strong>2023-24년:</strong> Scope 1 배출 상쇄용으로 첫 상쇄 완료</li>
-                  <li>• <strong>세계 최초</strong> 관할권 단위 REDD+ 기업 활용 사례</li>
-                </ul>
+              <!-- Country Examples Grid -->
+              <div style="display: grid; gap: 1.2rem; margin-bottom: 2rem;">
+                <!-- Guyana ART-TREES -->
+                <div class="korean-card" style="padding: 1rem; border-left: 4px solid #4CAF50;">
+                  <h4 style="font-size: 1.2rem; margin-bottom: 0.8rem; color: var(--korean-navy);">🇬🇾 가이아나 ART-TREES (세계 최초 관할권 단위 REDD+ 기업 활용)</h4>
+                  <ul style="font-size: 0.95rem; line-height: 1.5; margin: 0; padding-left: 1rem;">
+                    <li>• <strong>2022년 12월:</strong> 전 국토 대상 3,347만 TREES 크레딧 발급</li>
+                    <li>• <strong>Hess Corporation:</strong> 2030년까지 3,750만 크레딧 구매 (~7.5억 달러)</li>
+                    <li>• <strong>2023-24년:</strong> Scope 1 배출 상쇄용으로 첫 상쇄 완료</li>
+                    <li>• <strong>세계 최초</strong> 관할권 단위 REDD+ 기업 활용 사례</li>
+                  </ul>
+                </div>
+
+                <!-- Ghana ART-TREES -->
+                <div class="korean-card" style="padding: 1rem; border-left: 4px solid #2196F3;">
+                  <h4 style="font-size: 1.2rem; margin-bottom: 0.8rem; color: var(--korean-navy);">🇬🇭 가나 ART-TREES</h4>
+                  <ul style="font-size: 0.95rem; line-height: 1.5; margin: 0; padding-left: 1rem;">
+                    <li>• <strong>2023년 11월:</strong> 590만 헥타르 대상 1,170만 크레딧 발급</li>
+                    <li>• <strong>South Pole:</strong> 2024년 3월 유럽 소비재 기업들 대신 구매·상쇄</li>
+                    <li>• <strong>ICVCM 권장</strong> 관할권 접근법과 일치하는 고무결성 크레딧</li>
+                  </ul>
+                </div>
+
+                <!-- Mozambique Nested REDD+ -->
+                <div class="korean-card" style="padding: 1rem; border-left: 4px solid #FF9800;">
+                  <h4 style="font-size: 1.2rem; margin-bottom: 0.8rem; color: var(--korean-navy);">🇲🇿 모잠비크 중첩형 REDD+</h4>
+                  <ul style="font-size: 0.95rem; line-height: 1.5; margin: 0; padding-left: 1rem;">
+                    <li>• <strong>2024년:</strong> 정부 섹터별 베이스라인 내 개별 프로젝트 운영</li>
+                    <li>• <strong>Olam 등:</strong> 아프리카 공급망 배출 감축 명목으로 상쇄</li>
+                    <li>• <strong>Nested 시스템:</strong> 국가 회계와 프로젝트 크레딧 정렬</li>
+                  </ul>
+                </div>
               </div>
 
-              <!-- Ghana Section -->
-              <div class="korean-card" style="padding: 1.2rem; margin-bottom: 1rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--korean-navy);">🇬🇭 가나 ART-TREES</h4>
-                <ul style="font-size: 1rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
-                  <li>• <strong>2023년 11월:</strong> 590만 헥타르 대상 1,170만 크레딧 발급</li>
-                  <li>• <strong>South Pole:</strong> 2024년 3월 유럽 소비재 기업들 대신 구매·상쇄</li>
-                </ul>
-              </div>
-
-              <!-- Mozambique Section -->
-              <div class="korean-card" style="padding: 1.2rem; margin-bottom: 1rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--korean-navy);">🇲🇿 모잠비크 Nested REDD+</h4>
-                <ul style="font-size: 1rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
-                  <li>• <strong>2024년:</strong> 정부 섹터별 베이스라인 내 개별 프로젝트 운영</li>
-                  <li>• <strong>Olam 등:</strong> 아프리카 공급망 배출 감축 명목으로 상쇄</li>
-                </ul>
-              </div>
-
-              <!-- Key Insights Section -->
-              <div class="korean-card" style="padding: 1.2rem; margin-bottom: 1rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--korean-success);">✅ 핵심 인사이트</h4>
-                <ul style="font-size: 1rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
+              <!-- Key Insights -->
+              <div class="korean-card" style="padding: 1.2rem; background: #E8F5E8; border: 1px solid #4CAF50; margin-bottom: 1rem;">
+                <h4 style="font-size: 1.2rem; margin-bottom: 0.8rem; color: #2E7D32;">✅ 핵심 인사이트</h4>
+                <ul style="font-size: 0.95rem; line-height: 1.5; margin: 0; padding-left: 1rem; color: #1B5E20;">
                   <li>• <strong>관할권 REDD+ 크레딧</strong>이 이미 기업들에 의해 상쇄되고 있음</li>
                   <li>• <strong>석유가스(Hess), 소비재</strong> 기업들이 고무결성 상쇄재 추구</li>
                   <li>• <strong>ART-TREES</strong>가 유일한 대규모 섹터별 크레딧 공급원</li>
+                  <li>• <strong>CDM Program of Activities</strong>는 아직 주요 상쇄 실적 없음</li>
                 </ul>
               </div>
 
-              <!-- Future Outlook Section -->
-              <div class="korean-card" style="padding: 1.2rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.5rem; color: var(--korean-warning);">⚠️ 향후 전망</h4>
-                <ul style="font-size: 1rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
+              <!-- Future Outlook -->
+              <div class="korean-card" style="padding: 1.2rem; background: #FFF3E0; border: 1px solid #FF9800;">
+                <h4 style="font-size: 1.2rem; margin-bottom: 0.8rem; color: #F57C00;">⚠️ 향후 전망</h4>
+                <ul style="font-size: 0.95rem; line-height: 1.5; margin: 0; padding-left: 1rem; color: #E65100;">
                   <li>• <strong>수십 개 열대국가들</strong>이 유사한 관할권 REDD+ 프로그램 준비 중</li>
                   <li>• <strong>Article 6.4</strong> 2025년 이후 새로운 섹터별 크레딧 생성 예상</li>
                   <li>• <strong>기업 활용 확대</strong> 가능성이 높아 CDP 질문 범위 확장 예정</li>
@@ -1678,45 +1684,29 @@
             </div>
 
             <!-- Right Section: Singapore MAS Transition Credits -->
-            <div class="korean-card" style="padding: 1.5rem;">
-              <h4 style="font-size: 1.3rem; margin-bottom: 1rem; color: var(--korean-navy);">🇸🇬 싱가포르 MAS 트랜지션 크레딧(Transition Credits)</h4>
+            <div class="korean-card" style="padding: 1.5rem; background: #F3E5F5; border: 1px solid #9C27B0;">
+              <h4 style="font-size: 1.2rem; margin-bottom: 1rem; color: #7B1FA2;">🇸🇬 싱가포르 MAS 트랜지션 크레딧(Transition Credits)</h4>
               
-              <!-- Timeline -->
-              <div style="margin-bottom: 1.2rem;">
-                <p style="font-size: 1rem; margin-bottom: 0.5rem;"><strong>2023년 9월:</strong> MAS·맥킨지, 석탄화력 조기 폐쇄 위한 트랜지션 크레딧 개념 공식화</p>
-                <p style="font-size: 1rem; margin-bottom: 0.5rem;"><strong>TRACTION(Transition Credits Coalition):</strong> 2024년 중간보고서, 아시아 석탄발전 조기 퇴출 시범사업 진행</p>
+              <div style="margin-bottom: 1rem;">
+                <p style="font-size: 0.9rem; margin-bottom: 0.5rem;"><strong>2023년 9월:</strong> MAS·맥킨지, 석탄화력 조기 폐쇄 위한 트랜지션 크레딧 개념 공식화</p>
+                <p style="font-size: 0.9rem; margin-bottom: 0.5rem;"><strong>TRACTION(Transition Credits Coalition):</strong> 2024년 중간보고서, 아시아 석탄발전 조기 퇴출 시범사업 진행</p>
               </div>
 
-              <!-- Sectoral Approach -->
-              <div style="margin-bottom: 1.2rem;">
-                <p style="font-size: 1rem; margin-bottom: 0.5rem;"><strong>섹터별 접근:</strong> 발전(특히 석탄발전) 부문 전체를 대상으로 조기 폐쇄·감축 효과를 계량, 베이스라인 대비 감축분을 크레딧화</p>
-              </div>
-
-              <!-- International Standards -->
-              <div style="margin-bottom: 1.2rem;">
-                <p style="font-size: 1rem; margin-bottom: 0.5rem;"><strong>국제표준 도입 논의:</strong></p>
-                <ul style="font-size: 0.9rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
-                  <li>• VCMI(Voluntary Carbon Markets Integrity Initiative), ICVCM(Integrity Council for the Voluntary Carbon Market) 등에서 트랜지션 크레딧 표준화 논의</li>
-                  <li>• Article 6.4(파리협정) 하위 메커니즘에서 섹터별 트랜지션 크레딧 도입 검토</li>
-                </ul>
-              </div>
-
-              <!-- Key Insights -->
-              <div class="korean-card" style="padding: 1rem; margin-bottom: 1rem; background: var(--korean-success); color: white;">
-                <h5 style="margin-bottom: 0.5rem; color: white;">✅ 핵심 인사이트</h5>
-                <ul style="font-size: 0.9rem; line-height: 1.3; margin: 0; padding-left: 1rem;">
+              <div style="background: #E8F5E8; padding: 1rem; border-radius: 4px; margin-bottom: 1rem;">
+                <h5 style="margin-bottom: 0.5rem; color: #2E7D32;">✅ 핵심 인사이트</h5>
+                <ul style="font-size: 0.85rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
                   <li>• 트랜지션 크레딧은 발전·에너지 등 고배출 섹터 전체의 구조적 감축을 촉진하는 '섹터별 접근'이 특징</li>
-                  <li>• 개별 프로젝트가 아닌, 국가·지역 단위 섹터 전체의 조기 감축분을 크레딧화 → 대규모 금융 동원 가능</li>
+                  <li>• 개별 프로젝트가 아닌, 국가·지역 단위 섹터 전체의 조기 감축분을 크레딧화</li>
                   <li>• MAS, TRACTION 등 아시아에서 실증사업 선도</li>
                 </ul>
               </div>
 
-              <!-- Future Outlook -->
-              <div class="korean-card" style="padding: 1rem; background: var(--korean-warning); color: white;">
-                <h5 style="margin-bottom: 0.5rem; color: white;">⚠️ 향후 전망</h5>
-                <ul style="font-size: 0.9rem; line-height: 1.3; margin: 0; padding-left: 1rem;">
-                  <li>• 파리협정 Article 6.4 및 VCMI, ICVCM 등에서 공식 트랜지션 크레딧 표준 도입 시, 글로벌 확산 전망</li>
-                  <li>• 석탄발전 외 시멘트, 철강 등 고배출 섹터로 확대 가능성</li>
+              <div style="background: #FFF3E0; padding: 1rem; border-radius: 4px;">
+                <h5 style="margin-bottom: 0.5rem; color: #F57C00;">⚠️ 향후 전망</h5>
+                <ul style="font-size: 0.85rem; line-height: 1.4; margin: 0; padding-left: 1rem;">
+                  <li>• 수십 개 열대국가들이 유사한 관할권 REDD+ 프로그램 준비 중</li>
+                  <li>• Article 6.4 2025년 이후 새로운 섹터별 크레딧 생성 예상</li>
+                  <li>• 기업 활용 확대 가능성이 높아 CDP 질문 범위 확장 예정</li>
                 </ul>
               </div>
             </div>
@@ -2347,10 +2337,10 @@
             <!-- Box 1: Verra -->
             <div class="korean-card" style="min-height: 200px; padding: 1.5rem;">
               <h3 style="color: var(--korean-navy); margin-bottom: 1rem; font-size: 1.4rem;">📄 Verra Safeguards</h3>
-              <div style="background: var(--korean-white); border-radius: 8px; border: 1px solid var(--korean-border); overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+              <div style="background: var(--korean-white); border-radius: 8px; border: 1px solid var(--korean-border); overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); max-height: 300px; display: flex; align-items: center; justify-content: center;">
                 <img src="safeguard1.jpg"
                      alt="Verra Safeguard 정책 문서"
-                     style="width: 100%; height: auto; display: block; border-radius: 8px;"
+                     style="width: 100%; max-height: 280px; object-fit: contain; display: block; border-radius: 8px;"
                      loading="lazy">
               </div>
             </div>
@@ -2358,10 +2348,10 @@
             <!-- Box 2: Gold Standard -->
             <div class="korean-card" style="min-height: 200px; padding: 1.5rem;">
               <h3 style="color: var(--korean-navy); margin-bottom: 1rem; font-size: 1.4rem;">📄 Gold Standard Safeguards</h3>
-              <div style="background: var(--korean-white); border-radius: 8px; border: 1px solid var(--korean-border); overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+              <div style="background: var(--korean-white); border-radius: 8px; border: 1px solid var(--korean-border); overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); max-height: 300px; display: flex; align-items: center; justify-content: center;">
                 <img src="safeguard2.jpg"
                      alt="Gold Standard Safeguard 정책 문서"
-                     style="width: 100%; height: auto; display: block; border-radius: 8px;"
+                     style="width: 100%; max-height: 280px; object-fit: contain; display: block; border-radius: 8px;"
                      loading="lazy">
               </div>
             </div>
@@ -2369,10 +2359,10 @@
             <!-- Box 3: Climate Action Reserve -->
             <div class="korean-card" style="min-height: 200px; padding: 1.5rem;">
               <h3 style="color: var(--korean-navy); margin-bottom: 1rem; font-size: 1.4rem;">📄 CAR Safeguards</h3>
-              <div style="background: var(--korean-white); border-radius: 8px; border: 1px solid var(--korean-border); overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+              <div style="background: var(--korean-white); border-radius: 8px; border: 1px solid var(--korean-border); overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); max-height: 300px; display: flex; align-items: center; justify-content: center;">
                 <img src="safeguard3.jpg"
                      alt="Climate Action Reserve Safeguard 정책 문서"
-                     style="width: 100%; height: auto; display: block; border-radius: 8px;"
+                     style="width: 100%; max-height: 280px; object-fit: contain; display: block; border-radius: 8px;"
                      loading="lazy">
               </div>
             </div>
