--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
             <a href="carbon_market_trends_2024_2025_standalone.html" class="launch-btn">
                 🚀 프레젠테이션 시작하기
             </a>
+            
+            <div style="margin-top: 2rem; padding: 1rem; background: #fff3cd; border-radius: 4px; border-left: 4px solid #856404;">
+                <h3 style="color: #856404; margin-bottom: 1rem;">🔧 이미지 문제 해결 중</h3>
+                <p style="color: #856404; margin: 0;">현재 GitHub Pages에서 이미지 표시 문제를 해결하고 있습니다. 잠시 후 다시 시도해주세요.</p>
+            </div>
         </div>
         
         <div class="footer">
