Fix image paths: Add relative path prefix ./ for proper GitHub Pages serving
- Updated all image src attributes from 'image.jpg' to './image.jpg'
- Fixed paths in main presentation and all test files
- This should resolve the systematic image display issues on GitHub Pages

--- a/simple-test.html
+++ b/simple-test.html
@@ -6,7 +6,7 @@
 <body>
     <h1>GitHub Pages Image Test</h1>
     <p>Testing direct image access:</p>
-    <img src="sbti1.jpg" alt="SBTi Image" style="max-width: 300px;">
+    <img src="./sbti1.jpg" alt="SBTi Image" style="max-width: 300px;">
     <p>If this image shows, GitHub Pages is working correctly.</p>
 </body>
 </html>
