--- a/debug-images.html
+++ b/debug-images.html
@@ -21,19 +21,19 @@
         <h2>Test 1: Direct Image References</h2>
         <div class="image-test">
             <p>SBTi Image:</p>
-            <img src="sbti1.jpg" alt="SBTi Image" onerror="this.nextElementSibling.classList.add('error')" onload="this.nextElementSibling.classList.add('success')">
+            <img src="./sbti1.jpg" alt="SBTi Image" onerror="this.nextElementSibling.classList.add('error')" onload="this.nextElementSibling.classList.add('success')">
             <span>Loading...</span>
         </div>
         
         <div class="image-test">
             <p>Risk Case 1:</p>
-            <img src="risk1.jpg" alt="Risk Case 1" onerror="this.nextElementSibling.classList.add('error')" onload="this.nextElementSibling.classList.add('success')">
+            <img src="./risk1.jpg" alt="Risk Case 1" onerror="this.nextElementSibling.classList.add('error')" onload="this.nextElementSibling.classList.add('success')">
             <span>Loading...</span>
         </div>
         
         <div class="image-test">
             <p>Carbon Flow SVG:</p>
-            <img src="CarbonFlow.svg" alt="Carbon Flow" onerror="this.nextElementSibling.classList.add('error')" onload="this.nextElementSibling.classList.add('success')">
+            <img src="./CarbonFlow.svg" alt="Carbon Flow" onerror="this.nextElementSibling.classList.add('error')" onload="this.nextElementSibling.classList.add('success')">
             <span>Loading...</span>
         </div>
     </div>
