Add SBTi carbon credit approach section with detailed guidelines
- Added section 4: SBTi 탄소크레딧 접근법 under SBTi Net-zero standards
- Detailed Offsetting (금지), Insetting (조건부 인정), BVCM (권장됨) guidance
- Color-coded status indicators for clear visual distinction
- Added source citation from Evidence Synthesis Report Part 1

--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -2381,6 +2381,19 @@
                   <li>• 예외적으로, 제거(Removal)는 단기 및 장기 감축 목표에 사용할 수 있음</li>
                 </ul>
               </div>
+
+              <!-- SBTi Carbon Credit Approach -->
+              <div style="margin-bottom: 1.5rem;">
+                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">4. SBTi 탄소크레딧 접근법</h4>
+                <ul style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem; padding-left: 1rem;">
+                  <li>• <strong>Offsetting:</strong> 자사 배출 대신 외부 감축 활동으로 보상 → <span style="color: var(--korean-danger); font-weight: 600;">❌ SBTi 금지</span></li>
+                  <li>• <strong>Insetting:</strong> 공급망 내 감축 활동 활용 → <span style="color: var(--korean-warning); font-weight: 600;">⚠️ 조건부 인정</span></li>
+                  <li>• <strong>BVCM:</strong> 외부 감축에 추가 투자 → <span style="color: var(--korean-success); font-weight: 600;">✅ 권장됨</span> (기여 or 보상 주장 가능)</li>
+                </ul>
+                <p style="font-size: 1rem; line-height: 1.5; margin-top: 1rem; color: var(--korean-dark-gray); font-style: italic;">
+                  출처: Evidence Synthesis Report Part 1: Carbon Credits, SBTi
+                </p>
+              </div>
             </div>
           </div>
 
