--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -1840,7 +1840,7 @@
               <!-- Single SBTi Image -->
               <div style="margin-bottom: 2rem;">
                 <div style="background: var(--korean-white); border-radius: 8px; border: 1px solid var(--korean-border); overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); display: flex; align-items: center; justify-content: center;">
-                  <img src="images/sbti1.jpg"
+                  <img src="sbti1.jpg"
                        alt="SBTi 구분법 - Avoided emissions, Emissions reductions, Carbon sequestration"
                        style="width: 100%; height: auto; object-fit: contain; display: block; border-radius: 8px;"
                        loading="lazy">
