Update Verra Scope 3 Standard slide with comprehensive S3S Program details
🔹 Added comprehensive S3S Program information:
- Program overview: 기업 밸류체인 내 온실가스 배출 감축 활동 인증 및 추적
- Core elements: IU(Scope 3 Intervention Unit) 발급, R2R(Right-to-Report) 감축 실적 공유
- Development timeline: 2022.05 착수 → 2026년 말 v2.0 완전 도입
- Current project status: 7개 파일럿 프로젝트 진행 중 (2025년 7월 기준)
- Applied methodologies: VM0042(농업), VM0043(콘크리트), ACM0009(연료전환)

📊 Timeline table format for clear progression visualization
🔧 Maintains consistent Korean corporate design standards

--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -2411,84 +2411,87 @@
 
           <!-- Main content - Two column layout -->
           <div class="korean-grid" style="grid-template-columns: 1fr 1fr; gap: 2rem; margin-bottom: 2rem;">
-            <!-- Left Column: Verra Scope 3 Guidelines -->
+            <!-- Left Column: S3S Program Overview -->
             <div class="korean-card" style="padding: 1.5rem;">
-              <h3 style="font-size: 1.8rem; margin-bottom: 1.5rem; color: var(--korean-navy);">🔹 Verra VCS Scope 3 지침</h3>
+              <h3 style="font-size: 1.8rem; margin-bottom: 1.5rem; color: var(--korean-navy);">🔹 Scope 3 Standard (S3S) Program 개요</h3>
               
-              <!-- Scope 3 Categories -->
+              <!-- Purpose -->
               <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">1. 적용 범위</h4>
+                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">목적</h4>
+                <p style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem;">기업의 밸류체인(Scope 3) 내 온실가스 배출 감축 활동을 인증하고 투명하게 추적</p>
+              </div>
+
+              <!-- Key Elements -->
+              <div style="margin-bottom: 1.5rem;">
+                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">핵심 요소</h4>
                 <ul style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem; padding-left: 1rem;">
-                  <li>• Scope 3 배출량에 대한 탄소크레딧 사용 허용</li>
-                  <li>• 15개 카테고리 중 적절한 범위에서 상쇄 가능</li>
-                  <li>• 업스트림 및 다운스트림 활동 모두 포함</li>
+                  <li>• IU(Scope 3 Intervention Unit) 발급</li>
+                  <li>• <strong>R2R(Right-to-Report)</strong>로 감축 실적 공유</li>
                 </ul>
               </div>
 
-              <!-- Quality Requirements -->
+              <!-- Project Status -->
               <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">2. 품질 요건</h4>
+                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">프로젝트 현황 (2025년 7월 기준)</h4>
                 <ul style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem; padding-left: 1rem;">
-                  <li>• VCS 인증 프로젝트에서 발급된 크레딧만 사용</li>
-                  <li>• 추가성(Additionality) 검증 필수</li>
-                  <li>• 영구성(Permanence) 리스크 평가 완료</li>
-                </ul>
-              </div>
-
-              <!-- Reporting Requirements -->
-              <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">3. 보고 요건</h4>
-                <ul style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem; padding-left: 1rem;">
-                  <li>• 사용된 크레딧의 투명한 공개</li>
-                  <li>• 프로젝트 유형 및 지역 정보 제공</li>
-                  <li>• 상쇄 비율 및 방법론 명시</li>
+                  <li>• 정식 등록: 없음 (2026년 예정)</li>
+                  <li>• 파일럿 진행: 약 7개 프로젝트, 전 세계 다양한 부문·지역 대상</li>
                 </ul>
               </div>
             </div>
 
-            <!-- Right Column: Key Differences -->
+            <!-- Right Column: Development Timeline -->
             <div class="korean-card" style="padding: 1.5rem;">
-              <h3 style="font-size: 1.8rem; margin-bottom: 1.5rem; color: var(--korean-navy);">🔹 SBTi와의 주요 차이점</h3>
+              <h3 style="font-size: 1.8rem; margin-bottom: 1.5rem; color: var(--korean-navy);">🔹 개발 타임라인</h3>
               
-              <!-- Flexibility -->
-              <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">1. 유연성</h4>
-                <ul style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem; padding-left: 1rem;">
-                  <li>• Scope 3 전체 카테고리에 대한 크레딧 사용 허용</li>
-                  <li>• SBTi보다 더 관대한 접근 방식</li>
-                  <li>• 기업의 자율적 판단 존중</li>
-                </ul>
-              </div>
-
-              <!-- Target Application -->
-              <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">2. 적용 대상</h4>
-                <ul style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem; padding-left: 1rem;">
-                  <li>• 모든 Scope 3 배출량 상쇄 가능</li>
-                  <li>• 잔여 배출량 개념 적용하지 않음</li>
-                  <li>• 즉시 상쇄 목적으로 사용 가능</li>
-                </ul>
-              </div>
-
-              <!-- Market Approach -->
-              <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent); font-weight: 600;">3. 시장 접근법</h4>
-                <ul style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem; padding-left: 1rem;">
-                  <li>• 자발적 탄소시장 활성화 목적</li>
-                  <li>• 기업의 탄소중립 달성 지원</li>
-                  <li>• 다양한 프로젝트 유형 지원</li>
-                </ul>
+              <!-- Timeline Table -->
+              <div style="overflow-x: auto; margin-bottom: 1.5rem;">
+                <table style="width: 100%; border-collapse: collapse; font-size: 1rem;">
+                  <thead>
+                    <tr style="background: var(--korean-light-gray);">
+                      <th style="border: 1px solid var(--korean-border); padding: 0.5rem; text-align: center; font-weight: 600;">시점</th>
+                      <th style="border: 1px solid var(--korean-border); padding: 0.5rem; text-align: center; font-weight: 600;">내용</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem; text-align: center;">2022.05</td>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem;">프로그램 개발 착수</td>
+                    </tr>
+                    <tr>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem; text-align: center;">2024.08~11</td>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem;">1·2차 파일럿 진행 (농업, 건설 등 7개 부문)</td>
+                    </tr>
+                    <tr>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem; text-align: center;">2025.03~04</td>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem;">v0.1 공개, 컨설테이션 실시</td>
+                    </tr>
+                    <tr>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem; text-align: center;">2025년 하반기</td>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem;">v0.9 공개 버전 예정</td>
+                    </tr>
+                    <tr>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem; text-align: center;">2026년 2분기</td>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem;">v1.0 정식 출시, IU 발급 개시</td>
+                    </tr>
+                    <tr>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem; text-align: center;">2026년 말</td>
+                      <td style="border: 1px solid var(--korean-border); padding: 0.5rem;">v2.0 출시, R2R 및 S3IU 완전 도입</td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
 
           <!-- Bottom Section: Implementation Notes -->
           <div class="korean-card" style="padding: 1.5rem; background: var(--korean-light-gray); border-left: 4px solid var(--korean-accent);">
-            <h3 style="font-size: 1.6rem; margin-bottom: 1rem; color: var(--korean-navy);">🔹 실행 시 고려사항</h3>
+            <h3 style="font-size: 1.6rem; margin-bottom: 1rem; color: var(--korean-navy);">🔹 적용 방법론</h3>
             <ul style="font-size: 1.2rem; line-height: 1.6; margin: 0; padding-left: 1rem;">
-              <li>• VCS 표준을 준수하는 검증된 프로젝트 선택 필수</li>
-              <li>• 이중 계산 방지를 위한 레지스트리 관리 중요</li>
-              <li>• 지속적인 모니터링 및 보고 체계 구축 필요</li>
+              <li>• <strong>VM0042:</strong> 농업 토지관리 개선</li>
+              <li>• <strong>VM0043:</strong> 콘크리트 CO₂ 활용</li>
+              <li>• <strong>ACM0009:</strong> 연료 전환 (CDM 방식)</li>
+              <li>• 기존 VCS 방법론을 Scope 3 목적에 맞게 조정</li>
             </ul>
           </div>
         </div>
