Update Verra Scope 3 Standard slide subtitle to reflect SBTi insetting response
Changed subtitle from:
'Verra VCS(Verified Carbon Standard) Scope 3 배출량 탄소크레딧 사용 지침'
to:
'SBTi의 insetting에 대응한 프로그램'

This better reflects the strategic positioning of Verra's S3S program as a response to SBTi's insetting approach rather than just general carbon credit usage guidelines.

--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -2406,7 +2406,7 @@
         <div class="wrap korean-font alignleft">
           <div class="korean-section-header">
             <h2>Verra의 Scope 3 Standard</h2>
-            <div class="subtitle">Verra VCS(Verified Carbon Standard) Scope 3 배출량 탄소크레딧 사용 지침</div>
+            <div class="subtitle">SBTi의 insetting에 대응한 프로그램</div>
           </div>
 
           <!-- Main content - Two column layout -->
