Increase font sizes in Reduction vs Avoidance 구분 논란 section for better readability
📝 Font Size Improvements:
- Main title: 1.6rem → 2.2rem (font-weight: 700)
- Section headers: 1.3rem → 1.8rem (font-weight: 600)
- Main content: 1.1rem → 1.5rem
- Detail points: 1rem → 1.4rem
- Added proper color contrast with var(--korean-black)
- Enhanced margins and spacing for better visual hierarchy

🎯 Content Updated:
- Verra 반대 입장 section
- GS 구분 필요 section
- Article 6.2 ITMO 적용 이슈 section
- All subsections and detail points

🎨 Visual Enhancement:
- Improved readability with larger, more accessible font sizes
- Consistent Korean corporate design standards
- Better visual hierarchy and spacing

--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -1804,31 +1804,31 @@
           <div class="korean-grid" style="grid-template-columns: 3fr 7fr; gap: 2rem; margin-bottom: 2rem;">
             <!-- Left Column: Reduction vs Avoidance -->
             <div class="korean-card" style="padding: 1.5rem;">
-              <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem; color: var(--korean-navy);">Reduction vs Avoidance 구분 논란</h3>
+              <h3 style="font-size: 2.2rem; margin-bottom: 1.5rem; color: var(--korean-navy); font-weight: 700;">Reduction vs Avoidance 구분 논란</h3>
               
               <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent);">Verra 반대 입장:</h4>
-                <p style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem;">두 용어 분리에 대한 강한 반발</p>
+                <h4 style="font-size: 1.8rem; margin-bottom: 1rem; color: var(--korean-accent); font-weight: 600;">Verra 반대 입장:</h4>
+                <p style="font-size: 1.5rem; line-height: 1.6; margin-bottom: 1rem; color: var(--korean-black);">두 용어 분리에 대한 강한 반발</p>
                 <div style="margin-left: 1rem;">
-                  <p style="font-size: 1rem; line-height: 1.5; margin: 0;"><strong>REDD+ 공격:</strong> 직접적인 공격으로 인식</p>
+                  <p style="font-size: 1.4rem; line-height: 1.5; margin: 0; color: var(--korean-black);"><strong>REDD+ 공격:</strong> 직접적인 공격으로 인식</p>
                 </div>
               </div>
 
               <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent);">GS 구분 필요:</h4>
-                <p style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 1rem;">회피량은 미래 베이스라인 가정</p>
+                <h4 style="font-size: 1.8rem; margin-bottom: 1rem; color: var(--korean-accent); font-weight: 600;">GS 구분 필요:</h4>
+                <p style="font-size: 1.5rem; line-height: 1.6; margin-bottom: 1rem; color: var(--korean-black);">회피량은 미래 베이스라인 가정</p>
                 <div style="margin-left: 1rem;">
-                  <p style="font-size: 1rem; line-height: 1.5; margin: 0;"><strong>객관성 문제:</strong> 회피 크레딧 취급 거부</p>
+                  <p style="font-size: 1.4rem; line-height: 1.5; margin: 0; color: var(--korean-black);"><strong>객관성 문제:</strong> 회피 크레딧 취급 거부</p>
                 </div>
               </div>
 
               <div style="margin-bottom: 1.5rem;">
-                <h4 style="font-size: 1.3rem; margin-bottom: 0.8rem; color: var(--korean-accent);">Article 6.2 ITMO 적용 이슈</h4>
-                <p style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 0.8rem;"><strong>CMA 유보 입장:</strong> 배출 회피량 ITMO 포함 여부 결정 미룸</p>
-                <p style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 0.8rem;"><strong>국가 간 합의 어려움:</strong> 개발도상국 vs 선진국 이해관계 상충</p>
+                <h4 style="font-size: 1.8rem; margin-bottom: 1rem; color: var(--korean-accent); font-weight: 600;">Article 6.2 ITMO 적용 이슈</h4>
+                <p style="font-size: 1.5rem; line-height: 1.6; margin-bottom: 1rem; color: var(--korean-black);"><strong>CMA 유보 입장:</strong> 배출 회피량 ITMO 포함 여부 결정 미룸</p>
+                <p style="font-size: 1.5rem; line-height: 1.6; margin-bottom: 1rem; color: var(--korean-black);"><strong>국가 간 합의 어려움:</strong> 개발도상국 vs 선진국 이해관계 상충</p>
                 <div style="margin-left: 1rem;">
-                  <p style="font-size: 1rem; line-height: 1.5; margin-bottom: 0.5rem;"><strong>필리핀 적극 옹호:</strong> 회피 방법론 인정 로비</p>
-                  <p style="font-size: 1rem; line-height: 1.5; margin: 0;"><strong>EU/미국 신중:</strong> 환경 무결성 우선 원칙</p>
+                  <p style="font-size: 1.4rem; line-height: 1.5; margin-bottom: 0.8rem; color: var(--korean-black);"><strong>필리핀 적극 옹호:</strong> 회피 방법론 인정 로비</p>
+                  <p style="font-size: 1.4rem; line-height: 1.5; margin: 0; color: var(--korean-black);"><strong>EU/미국 신중:</strong> 환경 무결성 우선 원칙</p>
                 </div>
               </div>
             </div>
