--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -2803,11 +2803,10 @@
               </div>
             </div>
             <div class="korean-card">
-              <h3>SBTi Net-Zero</h3>
+              <h3>국가(Jurisdictional/Sectoral) REDD+</h3>
               <div class="korean-list">
-                <li>과학기반 넷제로 목표 설정</li>
-                <li>크레딧 사용 제한 및 우선순위</li>
-                <li>장기 감축 목표와 연계</li>
+                <li>Verra의 REDD+ 사태를 계기로 관심증대</li>
+                <li>LEAF Coalition (ART TREES), Forest Carbon Partnership Facility (FCPF), Coalition for Rainforest Nations 등</li>
               </div>
             </div>
             <div class="korean-card">
