Add new parallel header: 국가 베이스기반 REDD+ 프로그램 개선요구
📋 Content Structure Update:
- Added new parallel header above existing 시사점 section
- Same font hierarchy: 2rem font size, 1.5rem margin-bottom
- Proper spacing with 2.5rem margin-bottom for future bullet points
- Maintains consistent Korean corporate design standards

🎯 Ready for Content:
- Placeholder div prepared for bullet points
- Consistent formatting with existing 시사점 section
- Proper visual hierarchy maintained

--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -2846,6 +2846,11 @@
 
             <!-- Right Column: Key Messages -->
             <div class="korean-card" style="padding: 2rem;">
+              <h3 style="font-size: 2rem; margin-bottom: 1.5rem;">국가 베이스기반 REDD+ 프로그램 개선요구</h3>
+              <div style="font-size: 1.3rem; line-height: 1.7; margin-bottom: 2.5rem;">
+                <!-- Bullet points will be added here -->
+              </div>
+              
               <h3 style="font-size: 2rem; margin-bottom: 1.5rem;">시사점</h3>
               <div style="font-size: 1.3rem; line-height: 1.7; margin-bottom: 2rem;">
                 <p style="margin-bottom: 1rem;">• 무결성 라벨만으로 품질 보장 불가</p>
